# cpp_example

context7/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
context7/src/: freq.cpp
context7/tests/: test_freq.py
solution/: .gitlab-ci.yml  CMakeLists.txt  README.md  TODO.md  freq  in.txt
solution/src/: freq.cpp
